--- a/src/app/components/home/orkinbrown.home.component.html
+++ b/src/app/components/home/orkinbrown.home.component.html
@@ -5,7 +5,7 @@
             <h1>Orkin Brown & Associates</h1>
             <h3>Registered Auditors & Chartered Accountants (SA)</h3>
             <br />
-            <a href="#/contact" class="btn btn-outline-neutral btn-lg btn-round"><i class="fa fa-phone-square"></i>Get in touch</a>
+            <!-- <a href="#/contact" class="btn btn-outline-neutral btn-lg btn-round"><i class="fa fa-phone-square"></i>Get in touch</a> -->
         </div>
     </div>
 </div>
@@ -44,7 +44,7 @@
                         <i class="nc-icon nc-single-copy-04"></i>
                     </div>
                     <div class="description">
-                        <h4 class="info-title">Auditing</h4>
+                        <h4 class="info-title">Audit and Assurance</h4>
                         <!-- <p class="description">A small blurb to do with auditing.</p> -->
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                         <i class="nc-icon nc-chart-pie-36"></i>
                     </div>
                     <div class="description">
-                        <h4 class="info-title">Tax</h4>
+                        <h4 class="info-title">Taxation</h4>
                         <!-- <p class="description">A small blurb to do with taxation.</p> -->
                     </div>
                 </div>
@@ -74,39 +74,40 @@
         </div>
 
         <div class="row" style="margin-top: 30px;">
-            <div class="col-md-4">
-                <div class="info">
-                    <div class="icon icon-info">
-                        <i class="nc-icon nc-single-02"></i>
-                    </div>
-                    <div class="description">
-                        <h4 class="info-title">Advisory</h4>
-                        <!-- <p class="description">A small blurb to do with advisory.</p> -->
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
+            
+            <div class="col-md-6">
                 <div class="info">
                     <div class="icon icon-info">
                         <i class="nc-icon nc-glasses-2"></i>
                     </div>
                     <div class="description">
-                        <h4 class="info-title">Reviews</h4>
-                        <!-- <p class="description">A small blurb to do with reviews.</p> -->
+                        <h4 class="info-title">Secretarial</h4>
+                        <!-- <p class="description">A small blurb to do with reviews.</p>  -->
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
+                <div class="info">
+                    <div class="icon icon-info">
+                        <i class="nc-icon nc-single-02"></i>
+                    </div>
+                    <div class="description">
+                        <h4 class="info-title">Consulting and Advisory</h4>
+                        <!-- <p class="description">A small blurb to do with advisory.</p> -->
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="col-md-4">
                 <div class="info">
                     <div class="icon icon-info">
                         <i class="nc-icon nc-money-coins"></i>
                     </div>
                     <div class="description">
                         <h4 class="info-title">Payroll</h4>
-                        <!-- <p class="description">A small blurb to do with payroll services.</p> -->
+                        <p class="description">A small blurb to do with payroll services.</p> 
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <br />
