--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,24 +15,33 @@
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a [routerLink]="['/about']" class="nav-link"><i class="nc-icon nc-circle-10"></i> About Us</a>
+                    <a [routerLink]="['/home']" class="nav-link">Home</a>
+                        <!-- <i class="nc-icon nc-circle-10"></i>  -->
+                        
                 </li>
                 <li class="nav-item">
-                    <a [routerLink]="['/services']" class="nav-link"><i class="nc-icon nc-ruler-pencil"></i> Services</a>
+                    <a [routerLink]="['/about']" class="nav-link">About Us</a>
+                    <!-- <i class="nc-icon nc-circle-10"></i> -->
+                </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/services']" class="nav-link">Services</a>
+                    <!-- <i class="nc-icon nc-ruler-pencil"></i>  -->
                 </li>
                 <!-- <li class="nav-item">
                     <a [routerLink]="['/team']" class="nav-link"><i class="nc-icon nc-badge"></i>Team</a>
                 </li> -->
                 <li class="nav-item">
-                    <a [routerLink]="['/careers']" class="nav-link"><i class="nc-icon nc-alert-circle-i"></i> Careers</a>
+                    <a [routerLink]="['/careers']" class="nav-link">Careers</a>
+                    <!-- <i class="nc-icon nc-alert-circle-i"></i> -->
                 </li>
                 <!-- <li class="nav-item">
                     <a [routerLink]="['/testimonials']" class="nav-link"><i class="nc-icon nc-satisfied"></i>Testimonials</a>
                 </li> -->
                 <li class="nav-item">
-                    <a [routerLink]="['/contact']" class="nav-link"><i class="nc-icon nc-email-85"></i> Contact</a>
+                    <a [routerLink]="['/contact']" class="nav-link">Contact</a>
+                     <!-- <i class="nc-icon nc-email-85"></i>   -->
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="Follow us on LinkedIn" data-placement="bottom" href="https://www.linkedin.com/company/orkin-brown-and-assoc/" target="_blank">
                         <i class="fa fa-linkedin-square"></i>
                         <p class="d-lg-none">LinkedIn</p>
@@ -43,7 +52,7 @@
                         <i class="fa fa-facebook-square"></i>
                         <p class="d-lg-none">Facebook</p>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
