--- a/src/app/components/about/orkinbrown.about.component.html
+++ b/src/app/components/about/orkinbrown.about.component.html
@@ -13,16 +13,14 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">Our Practice</h2>
-                    <h5 class="description">Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
+                    <h5 class="description">Orkin Brown has been in existence for over 35 years, providing a wide range of services to our clients.</h5>
                     <br>
                     <h5 class="description">The practice is registered with the Independent Regulatory Board for Auditors (IRBA).</h5>
-                    <br>
-                    <h5 class="description">We have been in business for over 20 years.</h5>
                 </div>
             </div>
         </div>
     </div>
-
+<!-- 
     <div class="section section-gray text-center">
         <div class="container">
             <div class="row">
@@ -34,18 +32,23 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="section text-center">
+    <div class="section section-gray text-center">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">Our Team</h2>
-                    <h5 class="description">Our partners, Hilton Orkin and Grant Brown, lead a team of over 30 employees with a wealth and variety of experience.</h5>
+                    <h5 class="description">Our partners, Hilton Orkin and Grant Brown, lead a team of over 30 employees.</h5>
                     <br>
-                    <h5 class="description">Our practice is an accredited training office with the South African Institute of Chartered Accountants (SAICA). We take great pride in bringing aboard graduates and training them up across all practice streams, providing them with opportunities to thrive and excel.</h5>
+                    <h5 class="description">Our professional team have a wealth of knowledge and experience and are committed to providing excellent services to our clients.</h5>
                     <br>
-                    <h5 class="description">If you wish to join our team, <a href="#careers"><u>we are hiring!</u></a></h5>
+                    <!-- <h5 class="description">Orkin Brown is an accredited training office with the South African Institute of Chartered Accountants (SAICA). We take great pride in bringing aboard graduates and training them up across all practice streams, providing them with opportunities to thrive and excel.</h5> -->
+                    <h5 class="description">Orkin Brown is an accredited training office with SAICA for trainee accountants wishing to become chartered accountants.</h5>
+                    <br>
+                    <!-- <h5 class="description">Orkin Brown is an accredited training office for trainee accountants wishing to become CAs.</h5>
+                    <br> -->
+                    <h5 class="description">For all available positions within our practice, see our <a href="#careers"><u>Careers</u></a> page.</h5>
                 </div>
             </div>
         </div>
