--- a/src/app/components/contact/orkinbrown.contact.component.html
+++ b/src/app/components/contact/orkinbrown.contact.component.html
@@ -75,31 +75,10 @@
                 <div class="col-md-12 mr-auto ml-auto">
                     <h2 class="title">Offices</h2>
                 </div>
-                <div class="col-md-3 mr-auto ml-auto">
-                    <!-- https://demos.creative-tim.com/light-bootstrap-dashboard-pro/examples/components/buttons.html -->
-                    <button class="btn btn-social btn-link btn-facebook">
-                        <i class="fa fa-facebook-square"> </i>
-                        <!-- https://www.facebook.com/profile.php?id=100054344299467 -->
-                    </button>
-                    <br>
-                    <button class="btn btn-social btn-link btn-linkedin">
-                        <i class="fa fa-linkedin-square"></i>
-                        <!-- https://www.linkedin.com/company/orkin-brown-and-assoc/ -->
-                    </button>
-                    <!-- <a class="nav-link" rel="tooltip" title="Follow us on LinkedIn" data-placement="bottom" href="https://www.linkedin.com/company/orkin-brown-and-assoc/" target="_blank">
-                        <i class="fa fa-linkedin-square"></i>
-                        <p class="d-lg-none">LinkedIn</p>
-                    </a>
-                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/profile.php?id=100054344299467" target="_blank">
-                        <i class="fa fa-facebook-square"></i>
-                        <p class="d-lg-none">Facebook</p>
-                    </a> -->
-                    
+                <div class="col-md-8 mr-auto ml-auto">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d114602.32225070744!2d28.09598491861004!3d-26.153622161916605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjbCsDA5JzEzLjEiUyAyOMKwMDknNTkuMSJF!5e0!3m2!1sen!2sau!4v1713264217616!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="col-md-6 mr-auto ml-auto">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d114602.32225070744!2d28.09598491861004!3d-26.153622161916605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjbCsDA5JzEzLjEiUyAyOMKwMDknNTkuMSJF!5e0!3m2!1sen!2sau!4v1713264217616!5m2!1sen!2sau" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <div class="col-md-3 mr-auto ml-auto text-left">
+                <div class="col-md-4 mr-auto ml-auto text-left">
                     <h5 class="description">Johannesburg office:</h5>
                     <h5 class="description">43 St Margaret Road</h5>
                     <h5 class="description">Edenvale, Gauteng</h5>
@@ -110,11 +89,21 @@
                     <h5 class="description">E: <b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton&#64;orkinbrown.co.za</a></b></h5>
                     <h5 class="description">E: <b><a href="mailto:grant@orkinbrown.co.za?subject=Hi!">grant&#64;orkinbrown.co.za</a></b></h5>
                     <br/>
+                     <!-- https://demos.creative-tim.com/light-bootstrap-dashboard-pro/examples/components/buttons.html -->
+                     <button class="btn btn-social btn-link btn-facebook">
+                        <i class="fa fa-facebook-square"> </i>
+                        <!-- https://www.facebook.com/profile.php?id=100054344299467 -->
+                    </button>
+                    <br>
+                    <button class="btn btn-social btn-link btn-linkedin">
+                        <i class="fa fa-linkedin-square"></i>
+                        <!-- https://www.linkedin.com/company/orkin-brown-and-assoc/ -->
+                    </button>
                     <!-- <h5 class="description">We also have a presence in Sydney, Australia.</h5> -->
-                    <h5 class="description">Sydney office:</h5>
+                    <!-- <h5 class="description">Sydney office:</h5>
                     <h5 class="description">P: +61 414 405 502</h5>
                     <h5 class="description">E: <b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton&#64;orkinbrown.co.za</a></b></h5>
-                    <h5 class="description">E: <b><a href="mailto:chloe@orkinbrown.co.za?subject=Hi!">chloe&#64;orkinbrown.co.za</a></b></h5>
+                    <h5 class="description">E: <b><a href="mailto:chloe@orkinbrown.co.za?subject=Hi!">chloe&#64;orkinbrown.co.za</a></b></h5> -->
                 </div>
             </div>
             <br/><br/>
