--- a/src/app/components/home/orkinbrown.home.component.html
+++ b/src/app/components/home/orkinbrown.home.component.html
@@ -17,7 +17,6 @@
                 <h2 class="title">About Us</h2>
                 <h5>Orkin Brown and Associates is an audit, accounting and tax practice based out of 43 St Margaret Road, Edenvale, Gauteng.</h5>
                 <h5>The practice is registered with the Independent Regulatory Board for Auditors (IRBA). It is also an accredited training office with the South African Institute of Chartered Accountants (SAICA).</h5>
-                <h5>Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
                 <br>
                 <a href="#about" class="btn btn-info btn-round"><i class="fa fa-info-circle"></i>Learn More</a>
             </div>
@@ -78,7 +77,7 @@
             <div class="col-md-6">
                 <div class="info">
                     <div class="icon icon-info">
-                        <i class="nc-icon nc-glasses-2"></i>
+                        <i class="nc-icon nc-paper-2"></i>
                     </div>
                     <div class="description">
                         <h4 class="info-title">Secretarial</h4>
@@ -113,7 +112,7 @@
         <br />
         <div class="row" style="margin-top: 30px;">
             <div class="col-md-8 mr-auto ml-auto">
-                <a href="#services" class="btn btn-info btn-round"><i class="fa fa-briefcase"></i>See our services</a>
+                <a href="#services" class="btn btn-info btn-round"><i class="fa fa-briefcase"></i>Learn more</a>
             </div>
         </div>
     </div>
@@ -209,7 +208,7 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">Get in touch</h2>
-                    <h5 class="description">Want to get in touch? Contact us via phone, web form, or see our office locations.</h5>
+                    <h5 class="description">Contact us via phone, web form, or see our office locations.</h5>
                     <br>
                     <a href="#contact" class="btn btn-info btn-round"><i class="fa fa-phone-square"></i>Contact us</a>
                 </div>
