--- a/src/app/components/careers/orkinbrown.careers.component.scss
+++ b/src/app/components/careers/orkinbrown.careers.component.scss
@@ -3,6 +3,7 @@
     // background: #1e2654;
     background: #385061;
     padding: 20px;
+    margin-bottom: 20px;
 }
 
 h4, .h4 {
@@ -11,4 +12,8 @@ h4, .h4 {
 
 ul {
     list-style-position: inside;
+}
+
+.job-subheading {
+    margin-bottom: 20px;
 }
