--- a/src/app/components/services/orkinbrown.services.component.html
+++ b/src/app/components/services/orkinbrown.services.component.html
@@ -72,11 +72,11 @@
                     <ul class="description">
                         <li>Company Formations</li>
                         <li>Company and Close Corporation Conversions</li>
-                        <li>Ammendments to Directors, Shareholders and Members</li>
+                        <li>Amendments to Directors, Shareholders and Members</li>
                         <li>Preparation of Minutes and Resolutions</li>
                         <li>Submission of CIPC Annual Returns</li>
                         <li>Registered office facility and maintenance of statutory records</li>
-                        <li>Submission of beneficial owernship declarations for companies, close corporations and trusts</li>
+                        <li>Submission of Beneficial Ownership Declarations for companies, close corporations and trusts</li>
                     </ul>
                 </div>
             </div>
