--- a/src/app/components/about/orkinbrown.about.component.html
+++ b/src/app/components/about/orkinbrown.about.component.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">Our Practice</h2>
-                    <h5 class="description">Orkin Brown has been in existence for over 35 years, providing a wide range of services to our clients.</h5>
+                    <h5 class="description">Orkin Brown has been in existence for over 35 years, providing a wide range of services to our clients across various industries.</h5>
                     <br>
                     <h5 class="description">The practice is registered with the Independent Regulatory Board for Auditors (IRBA).</h5>
                 </div>
@@ -44,7 +44,7 @@
                     <h5 class="description">Our professional team have a wealth of knowledge and experience and are committed to providing excellent services to our clients.</h5>
                     <br>
                     <!-- <h5 class="description">Orkin Brown is an accredited training office with the South African Institute of Chartered Accountants (SAICA). We take great pride in bringing aboard graduates and training them up across all practice streams, providing them with opportunities to thrive and excel.</h5> -->
-                    <h5 class="description">Orkin Brown is an accredited training office with SAICA for trainee accountants wishing to become chartered accountants.</h5>
+                    <h5 class="description">Orkin Brown and Associates is an accredited training office with SAICA for trainee accountants wishing to become chartered accountants.</h5>
                     <br>
                     <!-- <h5 class="description">Orkin Brown is an accredited training office for trainee accountants wishing to become CAs.</h5>
                     <br> -->
