--- a/src/app/components/home/orkinbrown.home.component.html
+++ b/src/app/components/home/orkinbrown.home.component.html
@@ -15,8 +15,10 @@
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
                 <h2 class="title">About Us</h2>
-                <h5>Orkin Brown and Associates is an audit, accounting and tax practice based out of 43 St Margaret Road, Edenvale, Gauteng.</h5>
-                <h5>The practice is registered with the Independent Regulatory Board for Auditors (IRBA). It is also an accredited training office with the South African Institute of Chartered Accountants (SAICA).</h5>
+                <h5>Orkin Brown and Associates is an audit, accounting and taxation practice based in Edenvale, Gauteng.</h5>
+                <!-- <h5>We have been proudly servicing our clients for 35 years.</h5> -->
+                <h5>Our practice is registered with the Independent Regulatory Board for Auditors (IRBA), and is an accredited training office with the South African Institute of Chartered Accountants (SAICA).</h5>
+                <h5></h5>
                 <br>
                 <a href="#about" class="btn btn-info btn-round"><i class="fa fa-info-circle"></i>Learn More</a>
             </div>
@@ -136,6 +138,7 @@
                         </a>
                         <p class="card-description text-center">
                         Chartered Accountant (SA) <br>
+                        Chartered Accountant (Australia and New Zealand) <br>
                         H.Dip Tax Law
                         </p>
                     </div>
@@ -169,12 +172,12 @@
                     <div class="card-block">
                         <a href="#paper-kit">
                             <div class="author">
-                                <h4 class="card-title">Tyson Orkin</h4>
+                                <h4 class="card-title">Grant Brown</h4>
                                 <h6 class="card-category">Partner</h6>
                             </div>
                         </a>
                         <p class="card-description text-center">
-                        Dawg
+                        Chartered Accountant (SA) <br>
                         </p>
                     </div>
                 </div>
