--- a/src/app/components/careers/orkinbrown.careers.component.html
+++ b/src/app/components/careers/orkinbrown.careers.component.html
@@ -15,7 +15,7 @@
                     <h2 class="title">We're currently hiring for the following positions</h2>
                     <h5>Applications will be made via email. Clicking 'Apply Now' will open up your email application with a pre-populated application template.</h5>
                     <br>
-                    <h5><b>Please remember to attach your resume before sending.</b></h5>
+                    <h5><b>Please remember to attach your CV before sending.</b></h5>
                 </div>
             </div>
 
