--- a/src/app/components/home/orkinbrown.home.component.html
+++ b/src/app/components/home/orkinbrown.home.component.html
@@ -13,15 +13,25 @@
     <div class="section text-center">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 mr-auto ml-auto">
+            <div class="col-md-12 mr-auto ml-auto">
                 <h2 class="title">About Us</h2>
                 <h5>Orkin Brown and Associates is an audit, accounting and taxation practice based in Edenvale, Gauteng.</h5>
                 <!-- <h5>We have been proudly servicing our clients for 35 years.</h5> -->
                 <h5>Our practice is registered with the Independent Regulatory Board for Auditors (IRBA), and is an accredited training office with the South African Institute of Chartered Accountants (SAICA).</h5>
                 <h5></h5>
                 <br>
+            </div>
+            <div class="col-md-4 mr-auto ml-auto">
+                <img src="./assets/img/home/IRBA-logo.jpg" alt="IRBA logo">
+            </div>
+            <div class="col-md-4 mr-auto ml-auto">
                 <a href="#about" class="btn btn-info btn-round"><i class="fa fa-info-circle"></i>Learn More</a>
             </div>
+            <div class="col-md-4 mr-auto ml-auto">
+                <img src="./assets/img/home/SAICA-logo.png" alt="SAICA logo">
+            </div>
+
+
         </div>
 
     </div>
@@ -79,7 +89,7 @@
             <div class="col-md-6">
                 <div class="info">
                     <div class="icon icon-info">
-                        <i class="nc-icon nc-paper-2"></i>
+                        <i class="nc-icon nc-paper"></i>
                     </div>
                     <div class="description">
                         <h4 class="info-title">Secretarial</h4>
