--- a/src/app/components/services/orkinbrown.services.component.html
+++ b/src/app/components/services/orkinbrown.services.component.html
@@ -33,9 +33,9 @@
                     <h2 class="title">Accounting</h2>
                     <!-- <h5 class="description">Our expertise encompasses fundamental services such as bookkeeping, payroll management, and tax preparation, ensuring meticulous financial records and compliance. Additionally, the practice provides strategic financial planning, forensic accounting, and business advisory services, offering clients a holistic approach to financial management and growth.</h5> -->
                     <ul class="description">
-                        <li>Bookkeeping and Financial Record Maintenance</li>
-                        <li>Payroll Administration Services</li>
                         <li>Monthly Management Accounts</li>
+                        <li>Payroll Administration Services</li>
+                        <li>Bookkeeping and Financial Record Maintenance</li>
                         <li>VAT Compliance</li>
                         <li>Budget Preparation</li>
                     </ul>
@@ -54,7 +54,7 @@
                         <li>Corporate Tax Compliance</li>
                         <li>Personal Tax Compliance</li>
                         <li>Tax Planning and Advice</li>
-                        <li>SARS Audtis</li>
+                        <li>SARS Audits</li>
                         <li>SARS Objections and Appeals</li>
                         <li>Statutory Registrations</li>
                     </ul>
@@ -75,8 +75,8 @@
                         <li>Amendments to Directors, Shareholders and Members</li>
                         <li>Preparation of Minutes and Resolutions</li>
                         <li>Submission of CIPC Annual Returns</li>
-                        <li>Registered office facility and maintenance of statutory records</li>
-                        <li>Submission of Beneficial Ownership Declarations for companies, close corporations and trusts</li>
+                        <li>Registered Office facility and maintenance of statutory records</li>
+                        <li>Submission of Beneficial Ownership Declarations for Companies, Close Corporations and Trusts</li>
                     </ul>
                 </div>
             </div>
