Social media buttons on contact page.

--- a/src/app/components/contact/orkinbrown.contact.component.html
+++ b/src/app/components/contact/orkinbrown.contact.component.html
@@ -88,21 +88,13 @@
                     <h5 class="description">+61 414 405 502</h5>
                     <h5 class="description"><b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton&#64;orkinbrown.co.za</a></b></h5>
                     <br/>
-                     <!-- https://demos.creative-tim.com/light-bootstrap-dashboard-pro/examples/components/buttons.html -->
-                     <button class="btn btn-social btn-link btn-facebook">
+                    <a href="https://www.facebook.com/profile.php?id=100054344299467" class="btn btn-social btn-link btn-facebook social-link" role="button" target="_blank">
                         <i class="fa fa-facebook-square"> </i>
-                        <!-- https://www.facebook.com/profile.php?id=100054344299467 -->
-                    </button>
+                    </a>
+                    <a href="https://www.linkedin.com/company/orkin-brown-and-assoc/" class="btn btn-social btn-link btn-linkedin social-link" role="button" target="_blank">
+                        <i class="fa fa-linkedin-square"> </i>
+                    </a>
                     <br>
-                    <button class="btn btn-social btn-link btn-linkedin">
-                        <i class="fa fa-linkedin-square"></i>
-                        <!-- https://www.linkedin.com/company/orkin-brown-and-assoc/ -->
-                    </button>
-                    <!-- <h5 class="description">We also have a presence in Sydney, Australia.</h5> -->
-                    <!-- <h5 class="description">Sydney office:</h5>
-                    <h5 class="description">P: +61 414 405 502</h5>
-                    <h5 class="description">E: <b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton&#64;orkinbrown.co.za</a></b></h5>
-                    <h5 class="description">E: <b><a href="mailto:chloe@orkinbrown.co.za?subject=Hi!">chloe&#64;orkinbrown.co.za</a></b></h5> -->
                 </div>
             </div>
             <br/><br/>
