Updated photos and email links.

--- a/src/app/components/contact/orkinbrown.contact.component.html
+++ b/src/app/components/contact/orkinbrown.contact.component.html
@@ -86,7 +86,7 @@
                     <!-- <h5 class="description">Our head office is located out of 43 St Margaret Road, Edenvale, Gauteng, Johannesburg.</h5> -->
                     <h5 class="description">+27 11 453 4001</h5>
                     <h5 class="description">+61 414 405 502</h5>
-                    <h5 class="description"><b><a href="mailto:hilton@orkinbrown.co.za?subject=Hi!">hilton&#64;orkinbrown.co.za</a></b></h5>
+                    <h5 class="description"><b><a href="mailto:admin@orkinbrown.co.za?subject=Hi!">admin&#64;orkinbrown.co.za</a></b></h5>
                     <br/>
                     <a href="https://www.facebook.com/profile.php?id=100054344299467" class="btn btn-social btn-link btn-facebook social-link" role="button" target="_blank">
                         <i class="fa fa-facebook-square"> </i>
