--- a/src/app/components/home/orkinbrown.home.component.html
+++ b/src/app/components/home/orkinbrown.home.component.html
@@ -137,7 +137,7 @@
             <div class="col-md-6">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/home/hilton.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/home/hilton.jpeg" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
@@ -177,7 +177,7 @@
             <div class="col-md-6">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/home/tysie.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/home/grant.jpeg" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
