--- a/src/app/components/careers/orkinbrown.careers.component.scss
+++ b/src/app/components/careers/orkinbrown.careers.component.scss
@@ -11,7 +11,8 @@ h4, .h4 {
 }
 
 ul {
-    list-style-position: inside;
+    list-style: none;
+    // list-style-position: inside;
 }
 
 .job-subheading {
