--- a/src/app/components/careers/orkinbrown.careers.component.html
+++ b/src/app/components/careers/orkinbrown.careers.component.html
@@ -29,14 +29,15 @@
                     <div class="rounded job-card">
                         <h4>{{job.title}}</h4>
                         <br/>
-                        <!-- <p><b>{{job.experience}}</b></p> -->
-                        <!-- <p><b>{{job.location}}</b></p> -->
+                        <p><b>{{job.experience}}</b></p>
+                        <p><b>{{job.location}}</b></p>
                         <!-- <p>The candidate should have the following skills:</p> -->
-                        <!-- <ul> -->
-                            <!-- <li *ngFor="let skill of job.skills; let j = index">{{skill}}</li> -->
-                        <!-- </ul> -->
-                        <!-- <p>{{job.pay}}</p> -->
-                        <!-- <br/> -->
+                        <!-- <ul> 
+                            <li *ngFor="let skill of job.skills; let j = index">{{skill}}</li> 
+                        </ul> -->
+                        <p *ngFor="let skill of job.skills; let j = index">{{skill}}</p>
+                        <p>{{job.pay}}</p>
+                        <br/>
                         <a href="mailto:{{submissionEmail}}?subject=Application for the {{job.title}} role&body=Hi, %0D%0D My name is {INSERT_NAME} and I am applying for the role of {{job.title}}. %0D%0D You can contact me on {PHONE_NUMBER} and/or {EMAIL}. %0D%0D Please find my attached resume (please attach!) %0D%0D Thanks" class="btn btn-warning btn-round">Apply Now</a>
                     </div>
                 </div>
@@ -53,14 +54,16 @@
                     <div class="rounded job-card">
                         <h4>{{job.title}}</h4>
                         <br/>
-                        <!-- <p><b>{{job.experience}}</b></p> -->
-                        <!-- <p><b>{{job.location}}</b></p> -->
+                        <p><b>{{job.experience}}</b></p>
+                        <p><b>{{job.location}}</b></p>
                         <!-- <p>The candidate should have the following skills:</p> -->
-                        <!-- <ul> -->
-                            <!-- <li *ngFor="let skill of job.skills; let j = index">{{skill}}</li> -->
-                        <!-- </ul> -->
-                        <!-- <p>{{job.pay}}</p> -->
-                        <!-- <br/> -->
+                        <!-- <ul>
+                            <li *ngFor="let skill of job.skills; let j = index">{{skill}}</li>
+                        </ul> -->
+                        <p *ngFor="let skill of job.skills; let j = index">{{skill}}</p>
+
+                        <p>{{job.pay}}</p>
+                        <br/>
                         <a href="mailto:{{submissionEmail}}?subject=Application for the {{job.title}} role&body=Hi, %0D%0D My name is {INSERT_NAME} and I am applying for the role of {{job.title}}. %0D%0D You can contact me on {PHONE_NUMBER} and/or {EMAIL}. %0D%0D Please find my attached resume (please attach!) %0D%0D Thanks" class="btn btn-warning btn-round">Apply Now</a>
                     </div>
                 </div>
