--- a/src/app/components/home/orkinbrown.home.component.html
+++ b/src/app/components/home/orkinbrown.home.component.html
@@ -148,7 +148,7 @@
                         </a>
                         <p class="card-description text-center">
                         Chartered Accountant (SA) <br>
-                        H.Dip Tax Law
+                        H.Dip Tax Law <br>
                         Chartered Accountant (Australia and New Zealand) <br>
                         </p>
                     </div>
