--- a/src/app/components/careers/orkinbrown.careers.component.html
+++ b/src/app/components/careers/orkinbrown.careers.component.html
@@ -25,13 +25,17 @@
                 <div class="col-md-12 mr-auto ml-auto text-left job-subheading">
                     <h3>Audit</h3>
                 </div>
-                <div class="col-md-4 mr-auto ml-auto" *ngFor="let job of auditJobCards; let i = index">
+                <div class="col-md-4 mr-auto ml-auto text-left" *ngFor="let job of auditJobCards; let i = index">
                     <div class="rounded job-card">
                         <h4>{{job.title}}</h4>
                         <br/>
-                        <p *ngFor="let skill of job.skills; let j = index">{{skill}}</p>
+                        <ul>
+                            <li *ngFor="let skill of job.skills; let j = index">{{skill}}</li>
+                        </ul>
                         <br/>
-                        <a href="mailto:{{submissionEmail}}?subject=Application for the {{job.title}} role&body=Hi, %0D%0D My name is {INSERT_NAME} and I am applying for the role of {{job.title}}. %0D%0D You can contact me on {PHONE_NUMBER} and/or {EMAIL}. %0D%0D Please find my attached resume (please attach!) %0D%0D Thanks" class="btn btn-warning btn-round">Apply Now</a>
+                        <div class="text-center">
+                            <a href="mailto:{{submissionEmail}}?subject=Application for the {{job.title}} role&body=Hi, %0D%0D My name is {INSERT_NAME} and I am applying for the role of {{job.title}}. %0D%0D You can contact me on {PHONE_NUMBER} and/or {EMAIL}. %0D%0D Please find my attached resume (please attach!) %0D%0D Thanks" class="btn btn-warning btn-round">Apply Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -43,13 +47,17 @@
                     <h3>Taxation</h3>
                 </div>
                 <br>
-                <div class="col-md-4 mr-auto ml-auto" *ngFor="let job of taxationJobCards; let i = index">
+                <div class="col-md-4 mr-auto ml-auto text-left" *ngFor="let job of taxationJobCards; let i = index">
                     <div class="rounded job-card">
                         <h4>{{job.title}}</h4>
                         <br/>
-                        <p *ngFor="let skill of job.skills; let j = index">{{skill}}</p>
+                        <ul>
+                            <li *ngFor="let skill of job.skills; let j = index">{{skill}}</li>
+                        </ul>
                         <br/>
-                        <a href="mailto:{{submissionEmail}}?subject=Application for the {{job.title}} role&body=Hi, %0D%0D My name is {INSERT_NAME} and I am applying for the role of {{job.title}}. %0D%0D You can contact me on {PHONE_NUMBER} and/or {EMAIL}. %0D%0D Please find my attached resume (please attach!) %0D%0D Thanks" class="btn btn-warning btn-round">Apply Now</a>
+                        <div class="text-center">
+                            <a href="mailto:{{submissionEmail}}?subject=Application for the {{job.title}} role&body=Hi, %0D%0D My name is {INSERT_NAME} and I am applying for the role of {{job.title}}. %0D%0D You can contact me on {PHONE_NUMBER} and/or {EMAIL}. %0D%0D Please find my attached resume (please attach!) %0D%0D Thanks" class="btn btn-warning btn-round">Apply Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
