--- a/src/app/components/services/orkinbrown.services.component.html
+++ b/src/app/components/services/orkinbrown.services.component.html
@@ -19,7 +19,7 @@
                         <li>Voluntary Audits</li>
                         <li>Independent Reviews</li>
                         <li>Attorney Trust Account Audits</li>
-                        <li>Compliation of Annual Financial Statements</li>
+                        <li>Compilation of Annual Financial Statements</li>
                     </ul>
                 </div>
             </div>
